<resources>
    <string name="app_name">Accurate Weather Forecast</string>
    <string name="no_data_found_please_check_your_internet_connection">No Data Found..Please Check Your Internet Connection</string>
    <string name="about_us">ABOUT US</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="choose_a_city">Choose a City</string>
    <string name="select_a_city_or_country_to_see_the_weather">Select a City or country to see the weather</string>
    <string name="search_location">Search Location</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="celsius_c">Celsius ( c)</string>
    <string name="notifications">Notification</string>
    <string name="share_application">Share Application</string>
    <string name="rate_application">Rate Application</string>
    <string name="about_us_a">About us</string>
    <string name="min_max">Min | Max</string>
    <string name="pressure">Pressure</string>
    <string name="dew_point">Dew Point</string>
    <string name="wind">Wind</string>
    <string name="cloud_cover">Cloud Cover</string>
    <string name="todo">TODO</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="_24_hours">24 Hours</string>
    <string name="next_15_days_forecast">Next 15 Days Forecast</string>
    <string name="_0">0%</string>
    <string name="c_cloud_cover">CLOUD COVER</string>
    <string name="_5">5%</string>
    <string name="w_wind">WIND</string>
    <string name="daily_forecast">Daily Forecast</string>
    <string name="_7_days">7 Days</string>
    <string name="please_check_your_internet_connection">Please Check Your Internet Connection</string>
    <string name="settings">Settings</string>
    <string name="general">GENERAL</string>
    <string name="privacy_policy_url">https://accurateweatherforecast.blogspot.com/2021/02/weather-privacy-policy.html</string>
    <string name="mail_id">accurateweather806@gmail.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">More</string>
    <string name="_4_1">4.1</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>

    <!--test ad-->
    <!--<string name="fb_int">IMG_16_9_APP_INSTALL#330540714374985_330541361041587</string>
    <string name="fb_native">IMG_16_9_APP_INSTALL#330540714374985_330541251041598</string>-->

    <string name="google_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="google_int">ca-app-pub-3940256099942544/1033173712</string>
    <string name="test_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="test_app_id1">ca-app-pub-9611919736642270~3440171884</string>

    <!--ca-app-pub-3206456546664189~7970765493-->
    <!--ad manager test id-->

<!--    <string name="ad_unit_id_banner">/6499/example/banner</string>-->
<!--    <string name="ad_unit_int">/6499/example/interstitial</string>-->
<!--    <string name="ad_unit_native">/6499/example/native</string>-->
<!--    <string name="ad_unit_app_open">ca-app-pub-3940256099942544/3419835294</string>-->

    <!--ad manager live id-->

    <string name="ad_unit_id_banner">/22387492205,22654642069/com.weatherlive.darkskyweather.Banner0.1638257732</string>
    <string name="ad_unit_int">/22387492205,22654642069/com.weatherlive.darkskyweather.Interstitial0.1638257758</string>
    <string name="ad_unit_native">/22387492205,22654642069/com.weatherlive.darkskyweather.Native0.1638257849</string>
    <string name="ad_unit_app_open">/22387492205,22654642069/com.weatherlive.darkskyweather.AppOpen0.1638257713</string>

    <!--live-->
    <!-- <string name="l_fb_int">365449667893959_365451851227074</string>
     <string name="l_fb_native">365449667893959_365450307893895</string>
     <string name="l_google_banner">ca-app-pub-4293491867572780/1243883384</string>
     <string name="live_app_id">ca-app-pub-4293491867572780~2887984618</string>-->


</resources>