<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.PrefrencesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ad_view"
        android:background="@color/black"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_30">

            <ImageView
                android:id="@+id/ivback"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_20"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_arrow"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvsetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/ivback"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/ivback" />


            <View
                android:id="@+id/viewrecta"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_30"
                android:background="@drawable/ic_setting_recta"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvsetting" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:text="@string/general"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/viewrecta"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/viewrecta" />


            <ImageView
                android:id="@+id/ivnotification"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/dp_30"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_notification"
                app:layout_constraintLeft_toRightOf="@id/ivtem"
                app:layout_constraintRight_toLeftOf="@id/ivblank"
                app:layout_constraintTop_toBottomOf="@id/viewrecta" />


            <TextView
                android:id="@+id/tvnotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/notifications"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_12"
                app:layout_constraintLeft_toLeftOf="@id/ivnotification"
                app:layout_constraintRight_toRightOf="@id/ivnotification"
                app:layout_constraintTop_toBottomOf="@id/ivnotification" />


            <ImageView
                android:id="@+id/ivtem"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/dp_30"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_temperature_unit"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/ivnotification"
                app:layout_constraintTop_toBottomOf="@id/viewrecta" />


            <TextView
                android:id="@+id/tvtoptemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/temperature_unit"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_12"
                app:layout_constraintLeft_toLeftOf="@id/ivtem"
                app:layout_constraintRight_toRightOf="@id/ivtem"
                app:layout_constraintTop_toBottomOf="@id/ivtem" />

            <TextView
                android:id="@+id/tvbottomtemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/celsius_c"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_12"
                app:layout_constraintLeft_toLeftOf="@id/tvtoptemp"
                app:layout_constraintRight_toRightOf="@id/tvtoptemp"
                app:layout_constraintTop_toBottomOf="@id/tvtoptemp" />


            <ImageView
                android:id="@+id/ivblank"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/dp_30"
                android:src="@drawable/ic_group_more"
                app:layout_constraintLeft_toRightOf="@id/ivnotification"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewrecta"
                android:visibility="gone"/>


            <TextView
                android:id="@+id/tvmore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/more"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_12"
                app:layout_constraintLeft_toLeftOf="@id/ivblank"
                app:layout_constraintRight_toRightOf="@id/ivblank"
                app:layout_constraintTop_toBottomOf="@id/ivblank"
                android:visibility="gone"/>

            <View
                android:id="@+id/vaboutus"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_30"
                android:background="@drawable/ic_setting_recta"
                app:layout_constraintTop_toBottomOf="@id/tvbottomtemp" />

            <TextView
                android:id="@+id/tvabout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:text="@string/about_us"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/vaboutus"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/vaboutus" />


            <ImageView
                android:id="@+id/ivshare"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/dp_30"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_share_setings"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/ivrate"
                app:layout_constraintTop_toBottomOf="@id/vaboutus" />


            <TextView
                android:id="@+id/tvtemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/share_application"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_12"
                app:layout_constraintLeft_toLeftOf="@id/ivshare"
                app:layout_constraintRight_toRightOf="@id/ivshare"
                app:layout_constraintTop_toBottomOf="@id/ivshare" />


            <ImageView
                android:id="@+id/ivrate"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/dp_30"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_rate_settings"
                app:layout_constraintLeft_toRightOf="@id/ivshare"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vaboutus" />


            <TextView
                android:id="@+id/tvpre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/rate_application"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_12"
                app:layout_constraintLeft_toLeftOf="@id/ivrate"
                app:layout_constraintRight_toRightOf="@id/ivrate"
                app:layout_constraintTop_toBottomOf="@id/ivrate" />


            <!-- <ImageView
                 android:id="@+id/ivabouts"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginTop="@dimen/dp_30"
                 android:src="@drawable/ic_abouts_us"
                 app:layout_constraintLeft_toRightOf="@id/ivrate"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/vaboutus" />


             <TextView
                 android:id="@+id/tvaboutus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_5"
                 android:text="@string/about_us_a"
                 android:textColor="@color/grey"
                 android:textSize="@dimen/sp_12"
                 app:layout_constraintLeft_toLeftOf="@id/ivabouts"
                 app:layout_constraintRight_toRightOf="@id/ivabouts"
                 app:layout_constraintTop_toBottomOf="@id/ivabouts" />-->


            <ImageView
                android:id="@+id/ivfeed"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/dp_30"
                android:src="@drawable/ic_feedback_settings"
                app:layout_constraintLeft_toLeftOf="@id/ivshare"
                app:layout_constraintRight_toRightOf="@id/ivshare"
                app:layout_constraintTop_toBottomOf="@id/tvtemp" />


            <TextView
                android:id="@+id/tvfeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/feedback"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_12"
                app:layout_constraintLeft_toLeftOf="@id/ivfeed"
                app:layout_constraintRight_toRightOf="@id/ivfeed"
                app:layout_constraintTop_toBottomOf="@id/ivfeed" />


            <ImageView
                android:id="@+id/ivabouts"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/dp_30"
                android:src="@drawable/ic_abouts_us"
                app:layout_constraintLeft_toLeftOf="@+id/tvfeed"
                app:layout_constraintRight_toRightOf="@+id/tvfeed"
                app:layout_constraintTop_toBottomOf="@id/tvfeed" />


            <TextView
                android:id="@+id/tvaboutus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/about_us_a"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_12"
                app:layout_constraintLeft_toLeftOf="@id/ivabouts"
                app:layout_constraintRight_toRightOf="@id/ivabouts"
                app:layout_constraintTop_toBottomOf="@id/ivabouts" />


            <com.facebook.ads.NativeAdLayout
                android:id="@+id/native_ad_container"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/ic_btn_back"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="@id/ivrate"
                app:layout_constraintRight_toRightOf="@id/ivrate"
                app:layout_constraintTop_toBottomOf="@id/tvpre" />


            <!--  <FrameLayout
                  android:id="@+id/native_ad_container"
                  android:layout_width="150dp"
                  android:layout_height="150dp"
                  android:layout_marginTop="@dimen/dp_30"
                  android:background="@drawable/ic_btn_back"
                  android:visibility="gone"
                  app:layout_constraintLeft_toLeftOf="@id/ivrate"
                  app:layout_constraintRight_toRightOf="@id/ivrate"
                  app:layout_constraintTop_toBottomOf="@id/tvpre" />
      -->

            <TextView
                android:id="@+id/tvad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="Ad"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_12"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="@id/native_ad_container"
                app:layout_constraintRight_toRightOf="@id/native_ad_container"
                app:layout_constraintTop_toBottomOf="@id/native_ad_container" />


            <ImageView
                android:id="@+id/ivprivacy"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/dp_30"
                android:src="@drawable/ic_privacy_policy"
                app:layout_constraintLeft_toLeftOf="@id/native_ad_container"
                app:layout_constraintRight_toRightOf="@id/native_ad_container"
                app:layout_constraintTop_toBottomOf="@id/tvad" />


            <TextView
                android:id="@+id/tvivprivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/privacy_policy"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_12"
                app:layout_constraintLeft_toLeftOf="@id/ivprivacy"
                app:layout_constraintRight_toRightOf="@id/ivprivacy"
                app:layout_constraintTop_toBottomOf="@id/ivprivacy" />


            <!-- <com.facebook.ads.NativeAdLayout
                 android:id="@+id/native_ad_container"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_marginTop="40dp"
                 android:background="@drawable/ic_btn_back"
                 android:visibility="visible"
                 app:layout_constraintLeft_toLeftOf="@id/ivprivacy"
                 app:layout_constraintRight_toRightOf="@id/ivprivacy"
                 app:layout_constraintTop_toBottomOf="@id/ivprivacy" />-->


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.gms.ads.admanager.AdManagerAdView
        android:id="@+id/ad_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_unit_id_banner" />


    <!--<com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/google_banner" />-->

</RelativeLayout>