<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_margin="@dimen/dp_5"
    android:background="@drawable/bottome_back"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvdatetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:gravity="start"
            android:text="ThursDay 29 ,2020"
            android:textColor="@color/text_colore" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/ivicon"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginRight="@dimen/dp_20"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/tvweathetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="14sp" />


            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/grey" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/iv_12" />

                    <TextView
                        android:id="@+id/tvrainp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/dp_10"
                        android:text="0%"
                        android:textColor="@color/white" />

                    <ImageView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:layout_marginStart="@dimen/dp_15"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/temp" />

                    <TextView
                        android:id="@+id/maxtemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_5"
                        android:text="37 c"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/c_cloud_cover"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_12" />

                    <TextView
                        android:id="@+id/tvcc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:text="@string/_5"
                        android:textColor="@color/white" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/w_wind"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_12" />

                    <TextView
                        android:id="@+id/tvwind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:text="7.4 km/h"
                        android:textColor="@color/white" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>