<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/slider_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvtitel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:lines="1"
                    android:text="Black  Weather App"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:orientation="vertical"
                        tools:ignore="UselessParent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_50"
                            android:text="@string/_4_1"
                            android:textColor="@color/white" />

                        <RatingBar
                            android:id="@+id/id_tv_rating_bar"
                            style="@style/customRatingBar"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_marginStart="@dimen/dp_20"
                            android:numStars="5"
                            android:paddingTop="@dimen/dp_5"
                            android:rating="5" />


                    </LinearLayout>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/dp_5"
                        android:layout_marginBottom="@dimen/dp_5"
                        android:background="@color/grey" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:layout_marginRight="@dimen/dp_5"
                        android:layout_weight="0.8"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">

                        <ImageView
                            android:layout_width="@dimen/dp_20"
                            android:layout_height="@dimen/dp_20"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_user" />

                        <TextView
                            android:id="@+id/tvtotal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_5"
                            android:text="10k+"
                            android:textColor="@color/white" />


                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:id="@+id/tvdesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:lines="2"
                    android:text="@string/lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>